created seperate notification microservice..and updated the code for interservice communication